# PIASK

CUDA/: CMakeLists.txt  main.cu
MPI/: CMakeLists.txt  main.cpp
